# Salmon

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  README.md  meson.build  meson_options.txt
.ci/: .gitlab-ci.yml  gitlab-ci.yml
.github/workflows/: main.yml
include/compiler/: CountingStream.hpp  box.hpp  compiler.hpp  config.hpp  meta.hpp  package.hpp  parser.hpp  string.hpp  symbol.hpp  type.hpp
include/compiler/vm/: allocateditem.hpp  box.hpp  builtinfunction.hpp  empty.hpp  function.hpp  memory.hpp  package.hpp  string.hpp  symbol.hpp  type.hpp  vm.hpp  vm_ptr.hpp
include/core/: salmon_array.h  salmon_string.h
include/salmon/: config.hpp
include/salmon/core/: salmon_array.h  salmon_string.h  salmon_symbol.h
include/util/: assert.hpp  cmpunderlyingtype.hpp  enum.hpp  environment.hpp  prefixtrie.hpp
include/vm/: allocateditem.hpp  box.hpp  builtinfunction.hpp  empty.hpp  function.hpp  memory.hpp  new_type.hpp  package.hpp  string.hpp  symbol.hpp  type.hpp  typespec.hpp  vm.hpp  vm_ptr.hpp  vmstdlib.hpp
salmon/: config.cpp  main.cpp  meson.build
salmon/compiler/: CountingStream.cpp  box.cpp  compiler.cpp  config.cpp  package.cpp  parser.cpp  string.cpp  symbol.cpp  type.cpp
salmon/compiler/vm/: array.cpp  box.cpp  function.cpp  list.cpp  memory.cpp  package.cpp  string.cpp  symbol.cpp  type.cpp  vm.cpp  vm_ptr.cpp
salmon/pch/: pch_cpp.hpp
salmon/util/: assert.cpp  environment.cpp
salmon/vm/: allocateditem.cpp  arityexception.cpp  array.cpp  box.cpp  function.cpp  functionexception.cpp  list.cpp  memory.cpp  new_type.cpp  package.cpp  string.cpp  symbol.cpp  type.cpp  typespec.cpp  vm.cpp  vmstdlib.cpp
spec/: bytecode.org  ideas.org
spec/examples/: fib.sal  types.sal
test/: catch.cpp  meson.build
test/compiler/: meson.build  package_test.cpp  symbol_test.cpp
test/compiler/vm/: box_tests.cpp  builtin_function_test.cpp  package_test.cpp  vm_ptr_tests.cpp
test/util/: meson.build  prefixtrie_test.cpp
test/vm/: array_test.cpp  box_tests.cpp  builtin_function_test.cpp  function_test.cpp  interface_function_test.cpp  list_test.cpp  meson.build  package_test.cpp  symbol_test.cpp  type_spec_test.cpp  type_test.cpp  typespec_test.cpp  vm_ptr_tests.cpp
